[package]
name = "pokemines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-identity = "0.7.1"
actix-files = "0.6.5"
mongodb = "2.8.1"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
once_cell = "1.19.0"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.197"
thiserror = "1.0.57"
dotenv="0.15.0"
env_logger="0.11.3"
log="0.4.21"
envy="0.4.2"