[package]
name = "pokemines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-identity = "0.7.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-cors = "0.7.0"
mongodb = "2.8.1"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
once_cell = "1.19.0"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.197"
thiserror = "1.0.57"
dotenv="0.15.0"
env_logger="0.11.3"
log="0.4.21"
envy="0.4.2"
argon2="0.5.3"
serde_json = "1.0.114"
rand = "0.8.5"
rust-s3 = "0.33.0"
meilisearch-sdk = "0.25.0"
chrono = "0.4.35"
enum-as-inner = "0.6.0"
image = { version = "0.25.0", features = ["webp", "png", "jpeg"] }
fast_image_resize = "3.0.4"